Estilização feita e subtração concluída

--- a/Calculadora/style.css
+++ b/Calculadora/style.css
@@ -1,9 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .calculadora {
   display: flex;
   align-items: center;
-  background-color: gray;
+  background-color: #845ec2;
   flex-direction: column;
-  height: 100vh;
+  /* height: 100vh; */
   justify-content: center;
 }
 
@@ -22,28 +27,61 @@
 
 .number {
   width: 16vw;
+  font-family: "Roboto";
+  margin: 4px;
   height: 10vh;
-  background-color: rgb(71, 69, 69);
+  background-image: radial-gradient(
+    circle farthest-corner at 92.3% 71.5%,
+    rgb(3, 18, 39) 0%,
+    rgb(1, 14, 50) 90%
+  );
   color: white;
-  font-size: 1.4rem;
-  border: solid 1px white;
+  font-size: 2rem;
+  border: solid 2.5px white;
   cursor: pointer;
+  border-radius: 3%;
 }
 
 .number:active {
-  background-color: rgb(48, 46, 46);
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
 }
 
-.botoes-operacao {
-  flex-direction: row;
+#valor {
+  font-size: 4rem;
+  margin-right: 5%;
+  font-family: "Roboto";
+}
+.tela-valor {
+  display: flex;
+  height: 10vh;
+  background-color: white;
+  align-items: center;
+  margin-bottom: 10px;
+  justify-content: flex-end;
+  width: 48.5vw;
+  border: 2.5px solid white;
+}
+
+footer {
+  font-size: 20px;
+
+  height: 15vh;
+}
+
+.navbar {
+  list-style: none;
+  background-color: #4b4453;
+  width: 100%;
+  height: 9vh;
+  margin-bottom: 10vh;
+  border-bottom: 1px solid white;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.botao-operacao .number {
-  width: 16vw;
-}
-
-#valor {
+.navbar h1 {
+  color: rgb(250, 250, 250);
   font-size: 3rem;
 }
