--- a/Calculadora/style.css
+++ b/Calculadora/style.css
@@ -3,13 +3,25 @@
   padding: 0;
 }
 
+body {
+  background-color: rgb(57, 16, 124);
+}
 .calculadora {
   display: flex;
+  flex-direction: row;
+  width: 100%;
   align-items: center;
-  background-color: #845ec2;
-  flex-direction: column;
-  /* height: 100vh; */
   justify-content: center;
+}
+
+.teste {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(65, 49, 109);
+  justify-content: center;
+  width: 50%;
+  border: 10px solid rgb(225, 201, 228);
 }
 
 ::-webkit-scrollbar {
@@ -22,11 +34,11 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  width: 50%;
+  width: 100%;
 }
 
 .number {
-  width: 16vw;
+  width: 32.55%;
   font-family: "Roboto";
   margin: 4px;
   height: 10vh;
@@ -47,6 +59,14 @@
   transform: scale(1.05);
 }
 
+.number:hover {
+  background-image: radial-gradient(
+    circle farthest-corner at 92.3% 71.5%,
+    rgb(1, 13, 29) 0%,
+    rgb(2, 9, 31) 90%
+  );
+}
+
 #valor {
   font-size: 4rem;
   margin-right: 5%;
@@ -54,28 +74,30 @@
 }
 .tela-valor {
   display: flex;
-  height: 10vh;
+  height: 10%;
   background-color: white;
   align-items: center;
   margin-bottom: 10px;
   justify-content: flex-end;
-  width: 48.5vw;
+  width: 99.8%;
   border: 2.5px solid white;
 }
 
 footer {
-  font-size: 20px;
-
-  height: 15vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+  height: 15%;
 }
 
 .navbar {
   list-style: none;
-  background-color: #4b4453;
+  background-color: rgb(26, 16, 43);
   width: 100%;
   height: 9vh;
   margin-bottom: 10vh;
-  border-bottom: 1px solid white;
+  border-bottom: 3px solid rgb(161, 132, 241);
   display: flex;
   align-items: center;
   justify-content: center;
